# Homotopy-Continuation-Tracker-on-GPU

./: LICENSE  README.md  Solve_New_Problems.md  changelogs.md
GPU-HC/: CMakeLists.txt  README.md  run_trifocal_2op1p_30x30.sh
GPU-HC/Output_Write_Files/: GPU_Converged_HC_tracks.txt  Poly_Residuals.txt
GPU-HC/RANSAC_Data/trifocal_2op1p_30x30/: IntrinsicMatrix_real.txt  Pose31_real.txt  Synthetic_GT_Poses21.txt  Synthetic_GT_Poses31.txt  Synthetic_Intrinsic_Matrix.txt  Synthetic_Triplet_Edgels.txt  Triplet_TO_Edges_real.txt
GPU-HC/cmd/: .magmaHC-main.cpp.swp  CMakeLists.txt  magmaHC-main.cpp  magmaHC-main.cu
GPU-HC/magmaHC/: CMakeLists.txt  CPU_HC_Solver.cpp  CPU_HC_Solver.hpp  Data_Reader.cpp  Data_Reader.hpp  Evaluations.cpp  Evaluations.hpp  GPU_HC_Solver.cpp  GPU_HC_Solver.hpp  Makefile  define_params_and_read_files.cu  definitions.hpp  dev-cgesv-batched-small-sm.cuh  dev-cgesv-batched-small.cuh  dev-get-new-data.cuh  dev-trifocal_2op1p-eval.cuh  homotopy_continuation_solver.cu  magmaHC-problems.cuh  util.hpp
GPU-HC/magmaHC/PHC_Coeffs/: p2c-3pt_rel_pos_homog.h  p2c-3view_triangulation.h  p2c-4view_triangulation.h  p2c-5pt_rel_pos_alg_form_quat.h  p2c-5pt_rel_pos_full_form_quat.h  p2c-5pt_rel_pos_geo_form_quat.h  p2c-6pt_RS_abs_pos.h  p2c-6pt_RS_abs_pos_1lin.h  p2c-P3P.h  p2c-P3P_10x10.h  p2c-PnP_unkn_principal_pt.h  p2c-distorted_2view_triangulation.h  p2c-dual_reciever_TDOA_5pt.h  p2c-generalized_3views_4pts.h  p2c-numerical_generalized_3views_6lines.h  p2c-optimal_P4P_abs_pos.h  p2c-optimal_PnP_quat.h  p2c-rel_pos_quiver.h  p2c-trifocal_2op1p_30x30.h  p2c-uncalibrated_trifocal_rel_pos_CH.h  p2c-uncalibrated_trifocal_rel_pos_CY.h
GPU-HC/magmaHC/const-matrices/: p2c-trifocal_2op1p_30x30.h
GPU-HC/magmaHC/cpu-jacobian-evals/: cpu-eval-dHdX_H_trifocal_2op1p_30x30.hpp  cpu-eval-dHdX_dHdt_trifocal_2op1p_30x30.hpp  cpu-eval-indx_trifocal_2op1p_30x30.hpp
GPU-HC/magmaHC/cpuhc-solvers/: CPUHC_Generic_Solver.cpp  CPUHC_Generic_Solver_Eval_by_Indx.cpp
GPU-HC/magmaHC/gpu-idx-evals/: dev-eval-indxing-3pt_rel_pos_homog.cuh  dev-eval-indxing-3view_triangulation.cuh  dev-eval-indxing-4view_triangulation.cuh  dev-eval-indxing-5pt_rel_pos_alg_form_quat.cuh  dev-eval-indxing-5pt_rel_pos_full_form_quat.cuh  dev-eval-indxing-5pt_rel_pos_geo_form_quat.cuh  dev-eval-indxing-6pt_RS_abs_pos.cuh  dev-eval-indxing-6pt_RS_abs_pos_1lin.cuh  dev-eval-indxing-P3P.cuh  dev-eval-indxing-P3P_10x10.cuh  dev-eval-indxing-PnP_unkn_principal_pt.cuh  dev-eval-indxing-distorted_2view_triangulation.cuh  dev-eval-indxing-dual_reciever_TDOA_5pt.cuh  dev-eval-indxing-generalized_3views_4pts.cuh  dev-eval-indxing-generalized_3views_6lines.cuh  dev-eval-indxing-optimal_P4P_abs_pos.cuh  dev-eval-indxing-optimal_PnP_quat.cuh  dev-eval-indxing-rel_pos_quiver.cuh  dev-eval-indxing-trifocal_2op1p_30x30.cuh  dev-eval-indxing-trifocal_2op1p_30x30_32b.cuh  dev-eval-indxing-trifocal_2op1p_30x30_32b_P2C.cuh  dev-eval-indxing-trifocal_2op1p_30x30_32b_inline.cuh  dev-eval-indxing-trifocal_2op1p_30x30_8b_GM_inline.cuh  dev-eval-indxing-trifocal_2op1p_30x30_8b_SM.cuh  dev-eval-indxing-trifocal_2op1p_30x30_8b_SM_LimUnroll.cuh  dev-eval-indxing-trifocal_2op1p_30x30_8b_SM_inline.cuh  dev-eval-indxing-trifocal_2op1p_30x30_LimUnroll.cuh  dev-eval-indxing-trifocal_2op1p_30x30_LimUnroll_L2Cache.cuh  dev-eval-indxing-trifocal_2op1p_30x30_P2C.cuh  dev-eval-indxing-trifocal_2op1p_30x30_inline_LimUnroll.cuh  dev-eval-indxing-trifocal_2op1p_30x30_inline_LimUnroll_L2Cache.cuh  dev-eval-indxing-uncalibrated_trifocal_rel_pos_CH.cuh  dev-eval-indxing-uncalibrated_trifocal_rel_pos_CY.cuh
GPU-HC/magmaHC/gpu-kernels/: kernel_GPUHC_trifocal_2op1p_30x30_GM32b.cu  kernel_GPUHC_trifocal_2op1p_30x30_GM32b_RKL.cu  kernel_GPUHC_trifocal_2op1p_30x30_GM32b_RKL_LimUnroll.cu  kernel_GPUHC_trifocal_2op1p_30x30_GM32b_RKL_LimUnroll_TrunPaths.cu  kernel_GPUHC_trifocal_2op1p_30x30_GM32b_RKL_inline.cu  kernel_GPUHC_trifocal_2op1p_30x30_GM32b_RKL_inline_LimUnroll.cu  kernel_GPUHC_trifocal_2op1p_30x30_GM32b_RKL_inline_LimUnroll_TrunPaths.cu  kernel_GPUHC_trifocal_2op1p_30x30_GM8b_RKL_inline.cu  kernel_GPUHC_trifocal_2op1p_30x30_P2C.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_CodeOpt.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_CodeOpt_TrunPaths.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_CodeOpt_TrunPaths_TrunRANSAC.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_CodeOpt_TrunPaths_TrunRANSAC_Volta.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_CodeOpt_TrunPaths_Volta.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_CodeOpt_Volta.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL_LimUnroll.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL_LimUnroll_L2Cache.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL_LimUnroll_L2Cache_TrunPaths.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL_inline.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL_inline_LimUnroll.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL_inline_LimUnroll_L2Cache.cu  kernel_GPUHC_trifocal_2op1p_30x30_PH_RKL_inline_LimUnroll_L2Cache_TrunPaths.cu  kernel_GPUHC_trifocal_2op1p_30x30_SM8b_RKL.cu  kernel_GPUHC_trifocal_2op1p_30x30_SM8b_RKL_LimUnroll.cu  kernel_GPUHC_trifocal_2op1p_30x30_SM8b_RKL_inline.cu  kernel_HC_Solver_3pt_rel_pos_homog.cu  kernel_HC_Solver_3view_triangulation.cu  kernel_HC_Solver_4view_triangulation.cu  kernel_HC_Solver_5pt_rel_pos_alg_form_quat.cu  kernel_HC_Solver_5pt_rel_pos_full_form_quat.cu  kernel_HC_Solver_5pt_rel_pos_geo_form_quat.cu  kernel_HC_Solver_6pt_RS_abs_pos.cu  kernel_HC_Solver_6pt_RS_abs_pos_1lin.cu  kernel_HC_Solver_P3P.cu  kernel_HC_Solver_P3P_10x10.cu  kernel_HC_Solver_PnP_unkn_principal_pt.cu  kernel_HC_Solver_distorted_2view_triangulation.cu  kernel_HC_Solver_dual_reciever_TDOA_5pt.cu  (+10 more)
GPU-HC/old_files/: kernel_HC_Solver_trifocal_2op1p_30x30_P2C.cu
GPU-HC/parameter-HC/: CMakeLists.txt  README.md
GPU-HC/parameter-HC/cmd/: CMakeLists.txt
GPU-HC/straight-line-HC/: README.md
parameter-HC/magmaHC/: CMakeLists.txt  homotopy_continuation_solver.cu  magmaHC-problems.cuh
test/magmaHC/: CMakeLists.txt  any_class.cpp  any_class.hpp
(+1216 files in other folders)
